# django-ninja-fk-bug

./: .gitignore  pyproject.toml
app/: settings.py
mti/: apps.py  fields.py  models.py  schemas.py  tests.py
mti/migrations/: 0001_initial.py
